tests/basic/post/assert/050.pan
assert : { b:ğ”¹ | b = true } â†’ ğŸ™

f50 : {x:bool|x=false} -> {v:unit|?}
f50 = \x:bool. assert x

